--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>tentative</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="header">
+            1
+        </div>
+        <div class="sidebar">
+            1
+        </div>
+        <div class="main">
+            1
+        </div>
+        <div class="sidebar2">
+            1
+        </div>
+        <div class="footer">
+            1
+        </div>
+    </div>
 </body>
 </html>
